--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <meta name="viewport" content="width=device-width">
   
-  <title>Where open source communities live · GitHub</title>
+  <title>Open source communities for comfortable Data Framework · Databitty</title>
   <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="GitHub">
   <link rel="fluid-icon" href="https://avatars0.githubusercontent.com/u/22502462?v=4&amp;s=200" title="GitHub">
   <meta property="fb:app_id" content="1401488693436528">
