--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en"><head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="1RyFfbFjPEu8jcg1EajdXPtzRiuPniZIBMQ9of2InJY" />
   <link rel="dns-prefetch" href="https://assets-cdn.github.com">
   <link rel="dns-prefetch" href="https://avatars0.githubusercontent.com">
   <link rel="dns-prefetch" href="https://avatars1.githubusercontent.com">
