--- a/index.html
+++ b/index.html
@@ -1,104 +1,31 @@
 <html lang="en"><head>
     <meta charset="utf-8">
+    
+    <link rel="stylesheet" media="all" href="https://github-atom-io-herokuapp-com.global.ssl.fastly.net/assets/application-44277a633b014d64acc905d663954d02.css" data-turbolinks-track="true">
+    
+    <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/frameworks-77c3b874f32e71b14cded5a120f42f5c7288fa52e0a37f2d5919fbd8bcfca63c.css" integrity="sha256-d8O4dPMucbFM3tWhIPQvXHKI+lLgo38tWRn72Lz8pjw=" media="all" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/github-0ff6dbee3b3c835114548441983cff44551bc135cd7bdc651c3322190821a51c.css" integrity="sha256-D/bb7js8g1EUVIRBmDz/RFUbwTXNe9xlHDMiGQghpRw=" media="all" rel="stylesheet">
+    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="GitHub">
+    <link rel="fluid-icon" href="https://avatars0.githubusercontent.com/u/22502462?v=4&amp;s=200" title="GitHub">
+    <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/site-87fc1b705115bb5758018dffb7c1ed35b316b40ef094c4d5bd0478efe83d7af7.css" integrity="sha256-h/wbcFEVu1dYAY3/t8HtNbMWtA7wlMTVvQR47+g9evc=" media="all" rel="stylesheet">
     <meta name="google-site-verification" content="1RyFfbFjPEu8jcg1EajdXPtzRiuPniZIBMQ9of2InJY" />
-  <link rel="dns-prefetch" href="https://assets-cdn.github.com">
-  <link rel="dns-prefetch" href="https://avatars0.githubusercontent.com">
-  <link rel="dns-prefetch" href="https://avatars1.githubusercontent.com">
-  <link rel="dns-prefetch" href="https://avatars2.githubusercontent.com">
-  <link rel="dns-prefetch" href="https://avatars3.githubusercontent.com">
-  <link rel="dns-prefetch" href="https://github-cloud.s3.amazonaws.com">
-  <link rel="dns-prefetch" href="https://user-images.githubusercontent.com/">
-
-<link rel="stylesheet" href="/css/index.css"><link rel="stylesheet" media="all" href="https://github-atom-io-herokuapp-com.global.ssl.fastly.net/assets/application-44277a633b014d64acc905d663954d02.css" data-turbolinks-track="true">
-
-<meta content="origin-when-cross-origin" name="referrer">
-
-  <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/frameworks-77c3b874f32e71b14cded5a120f42f5c7288fa52e0a37f2d5919fbd8bcfca63c.css" integrity="sha256-d8O4dPMucbFM3tWhIPQvXHKI+lLgo38tWRn72Lz8pjw=" media="all" rel="stylesheet">
-  <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/github-0ff6dbee3b3c835114548441983cff44551bc135cd7bdc651c3322190821a51c.css" integrity="sha256-D/bb7js8g1EUVIRBmDz/RFUbwTXNe9xlHDMiGQghpRw=" media="all" rel="stylesheet">
-  
-  
-  <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/site-87fc1b705115bb5758018dffb7c1ed35b316b40ef094c4d5bd0478efe83d7af7.css" integrity="sha256-h/wbcFEVu1dYAY3/t8HtNbMWtA7wlMTVvQR47+g9evc=" media="all" rel="stylesheet">
-  
-
-  <meta name="viewport" content="width=device-width">
-  
-  <title>Open source communities for comfortable Data Framework · Databitty</title>
-  <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="GitHub">
-  <link rel="fluid-icon" href="https://avatars0.githubusercontent.com/u/22502462?v=4&amp;s=200" title="GitHub">
-  <meta property="fb:app_id" content="1401488693436528">
-
+    <meta content="origin-when-cross-origin" name="referrer">
+    <meta name="viewport" content="width=device-width">
+    <title>Open source communities for comfortable Data Framework · Databitty</title>
     <meta property="og:url" content="https://github.com">
     <meta property="og:site_name" content="GitHub">
     <meta property="og:title" content="Build software better, together">
-    <meta property="og:description" content="GitHub is where people build software. More than 23 million people use GitHub to discover, fork, and contribute to over 64 million projects.">
-    <meta property="og:image" content="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="1200">
-    <meta property="og:image" content="https://assets-cdn.github.com/images/modules/open_graph/github-mark.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="620">
-    <meta property="og:image" content="https://assets-cdn.github.com/images/modules/open_graph/github-octocat.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="620">
-
-
-  <link rel="assets" href="https://assets-cdn.github.com/">
-  
-  <meta name="pjax-timeout" content="1000">
-  
-  <meta name="request-id" content="08A5:15480:3AD52DE:5AACC21:5985E5F7" data-pjax-transient="">
-  
-
-  <meta name="selected-link" value="/open-source" data-pjax-transient="">
-
-  <meta name="google-site-verification" content="KT5gs8h0wvaagLKAVWq8bbeNwnZZK1r1XQysX3xurLU">
-<meta name="google-site-verification" content="ZzhVyEFwb7w3e0-uOTltm8Jsck2F5StVihD0exw2fsA">
-    <meta name="google-analytics" content="UA-3769691-2">
-
-<meta content="collector.githubapp.com" name="octolytics-host"><meta content="github" name="octolytics-app-id"><meta content="https://collector.githubapp.com/github-external/browser_event" name="octolytics-event-url"><meta content="08A5:15480:3AD52DE:5AACC21:5985E5F7" name="octolytics-dimension-request_id"><meta content="sea" name="octolytics-dimension-region_edge"><meta content="iad" name="octolytics-dimension-region_render">
-
-
-
-
-
-  <meta class="js-ga-set" name="dimension1" content="Logged Out">
-
-
-  
-
-      <meta name="hostname" content="github.com">
-  <meta name="user-login" content="">
-
-      <meta name="expected-hostname" content="github.com">
-    <meta name="js-proxy-site-detection-payload" content="ODNhZmFlZmJiZjhhZjZhNTI0Y2E0N2ZmZGIwYmE2MzVlOGUzY2JkZmFmZTY4ZjRmMjg0NmNjNDI5YjExMDE2NHx7InJlbW90ZV9hZGRyZXNzIjoiMTE4LjE3OS4xNjEuMTE4IiwicmVxdWVzdF9pZCI6IjA4QTU6MTU0ODA6M0FENTJERTo1QUFDQzIxOjU5ODVFNUY3IiwidGltZXN0YW1wIjoxNTAxOTQ3MzgzLCJob3N0IjoiZ2l0aHViLmNvbSJ9">
-
-
-  <meta name="html-safe-nonce" content="b46cd0318822c907c35bd25079fb1c489f5c61b0">
-
-  <meta http-equiv="x-pjax-version" content="2ddfb2162bd5f6016025be9f8e1809c4">
-  
-
-      <meta name="viewport" content="width=device-width">
-  <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/site-87fc1b705115bb5758018dffb7c1ed35b316b40ef094c4d5bd0478efe83d7af7.css" integrity="sha256-h/wbcFEVu1dYAY3/t8HtNbMWtA7wlMTVvQR47+g9evc=" media="all" rel="stylesheet">
-
-
-
-
-  <meta name="browser-stats-url" content="https://api.github.com/_private/browser/stats">
-
-  <meta name="browser-errors-url" content="https://api.github.com/_private/browser/errors">
-
-  <link rel="mask-icon" href="https://avatars0.githubusercontent.com/u/22502462?v=4&amp;s=200" color="#000000">
-  <link rel="icon" type="image/x-icon" href="https://avatars0.githubusercontent.com/u/22502462?v=4&amp;s=200">
-
-<meta name="theme-color" content="#1e2327">
-
-
-  <meta name="u2f-support" content="true">
-
+    <meta property="og:description" content="This is a Developer HUB. Try to make comfortable Data Framework.">
+    <meta name="google-analytics" content="UA-104068966-1">
+    <meta name="expected-hostname" content="github.com">
+    <meta name="viewport" content="width=device-width">
+    <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/site-87fc1b705115bb5758018dffb7c1ed35b316b40ef094c4d5bd0478efe83d7af7.css" integrity="sha256-h/wbcFEVu1dYAY3/t8HtNbMWtA7wlMTVvQR47+g9evc=" media="all" rel="stylesheet">
+    <meta name="browser-stats-url" content="https://api.github.com/_private/browser/stats">
+    <meta name="browser-errors-url" content="https://api.github.com/_private/browser/errors">
+    <link rel="mask-icon" href="https://avatars0.githubusercontent.com/u/22502462?v=4&amp;s=200" color="#000000">
+    <link rel="icon" type="image/x-icon" href="https://avatars0.githubusercontent.com/u/22502462?v=4&amp;s=200">
+    <meta name="theme-color" content="#1e2327">
+    <meta name="u2f-support" content="true">
   </head>
 
   <body class="logged-out env-production page-responsive min-width-0 f4 chrome-mouse">
