--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </h2>
      <div class="shelf-content">
       <a href="https://guides.github.com/activities/hello-world/" class="btn btn-primary shelf-cta" target="_blank" data-ga-click="Hello World, click, Clicked Let's get started button">Read the guide</a>
-      <a href="/new" class="btn shelf-cta ml-3" data-ga-click="Hello World, click, Clicked new repository button - context:user">Start a project</a>
+      <a href="https://github.com/databitty" class="btn shelf-cta ml-3" data-ga-click="Hello World, click, Clicked new repository button - context:user">Start a project</a>
     </div>
     <p class="lead text-center mb-2 pb-md-4 col-md-8 mx-auto">
       Open source software is free for you to use and explore. Get involved to perfect your craft and be part of something big.
